略微完善String、Exception 添加基础的单元测试

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,1 +1,23 @@
-git commit -m "first commit"
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+include(FetchContent)
+FetchContent_Declare(
+        googletest
+        URL https://github.com/google/googletest/archive/release-1.12.0.zip
+)
+FetchContent_MakeAvailable(googletest)
+
+#add_compile_options(-fsanitize=address)
+#link_libraries(-fsanitize=address)
+
+file(GLOB_RECURSE TEST_SOURCES "./*.cpp")
+
+foreach(test_source ${TEST_SOURCES})
+    get_filename_component(test_name ${test_source} NAME_WE)
+    add_executable(${test_name} ${test_source})
+    target_link_libraries(${test_name} gtest_main Cedar)
+    add_test(NAME ${test_name} COMMAND ${test_name})
+endforeach()
+
+enable_testing()
