Update copyright notices and switch to pragma once
- Replaced all instances of #ifdef guards with #pragma once in header files to simplify and modernize the include guard mechanism.
- Added MIT License notice to all source (.cpp) and header (.h) files as well as the CMakeLists.txt to ensure compliance and clear licensing.

These changes enhance maintainability and ensure the project adheres to licensing requirements.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,7 @@
+# Copyright (C) 2024 Cedar Community
+# This file is part of Cedar-Core, distributed under the MIT License.
+# See the LICENSE file in the project root for full license information.
+
 cmake_minimum_required(VERSION 3.29)
 project(Cedar VERSION 0.1 DESCRIPTION "Cedar Core")
 
