--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,7 @@
+# Copyright (C) 2024 Cedar Community
+# This file is part of Cedar-Core, distributed under the MIT License.
+# See the LICENSE file in the project root for full license information.
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
