Add MathFunctions module for floating point and sqrt operations
- Implemented the MathFunctions module, including basic operations on floating points and calculation of sqrt function
- Optimized the code structure of the Vector module to improve performance and code readability

--- a/src/Math/CMakeLists.txt
+++ b/src/Math/CMakeLists.txt
@@ -3,10 +3,5 @@
 # See the LICENSE file in the project root for full license information.
 
 target_sources(Cedar PRIVATE
-        Exception.cpp
-        String.cpp
-        Memory.cpp
+        MathFunctions.cpp
 )
-
-add_subdirectory(Threading)
-add_subdirectory(Math)
