--- a/src/IO/CMakeLists.txt
+++ b/src/IO/CMakeLists.txt
@@ -3,11 +3,5 @@
 # See the LICENSE file in the project root for full license information.
 
 target_sources(Cedar PRIVATE
-        Exception.cpp
-        String.cpp
-        Memory.cpp
+        Path.cpp
 )
-
-add_subdirectory(IO)
-add_subdirectory(Math)
-add_subdirectory(Threading)
