Added containers, memory management features, and optimized string handling
 Detailed Description:
 - Added Array and HashMap containers
   - Introduced Pair container for key-value storage
 - Provided hash methods for basic types
 - Added LockGuard to simplify lock mechanism management
 - Enhanced the Memory module with several features:
   - Memory::forward for memory forwarding
   - Memory::Allocator for memory allocation
   - Memory::UniquePointer for unique smart pointers
   - Memory::SharedPointer for shared smart pointers
 - Improved Unicode support for more robust string handling
   - Separated Rune handling from String into the Unicode package
   - Optimized String code structure for better readability and maintainability
 - Added OutOfMemoryException to handle memory insufficiency exceptions

--- a/src/Text/CMakeLists.txt
+++ b/src/Text/CMakeLists.txt
@@ -3,13 +3,6 @@
 # See the LICENSE file in the project root for full license information.
 
 target_sources(Cedar PRIVATE
-        BasicHashDefinitions.cpp
-        Exception.cpp
-        String.cpp
-        Memory.cpp
+        Unicode.cpp
+        Unicode/UnicodeTables.cpp
 )
-
-add_subdirectory(IO)
-add_subdirectory(Math)
-add_subdirectory(Text)
-add_subdirectory(Threading)
